tests/errors/test_90.x
// Multiple methods in trait with the same name

trait Foo -> {
	foo() -> void;
	foo() -> void;
}


fn main() -> void{}
